<resources>
    <string name="app_name">mall</string>
    <string name="search">搜索</string>
    <string name="save_password">save password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="my_coupon">我的优惠劵</string>
    <string name="logout">退出登录</string>
    <string name="username">张金鑫</string>
    <string name="new_products">新品推荐</string>
    <string name="product_name1">商品名称1</string>
    <string name="product_name2">商品名称2</string>
    <string name="product_product_name2">商品描述1</string>
    <string name="commodity_price">￥9999.9</string>
    <string name="order_id">订单编号:2022123101</string>
    <string name="order_time">下单时间:2022-11-28 09:03:23</string>
    <string name="product_details">商品详情1</string>
    <string name="add_cart">加入购物车</string>
    <string name="more">more</string>
    <string name="cart">cart</string>
    <string name="todo">TODO</string>
    <string name="recently_popular">最近流行</string>
    <string name="my_order">我的订单</string>
    <string name="username_password_error">用户名与密码不正确，请重新输入！</string>
    <string name="login_successful">登录成功！</string>
    <string name="server_error">服务器出错！</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_login">去登录</string>
    <string name="already_account">已有账号，</string>
    <string name="settlement">结算</string>
    <string name="total">合计</string>
    <string name="product_list">商品列表</string>


</resources>