<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/detail_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/iphone14" />


    <TextView
        android:id="@+id/detail_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/commodity_price"
        android:textColor="#B3C3E6"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/product_name1"
        android:textColor="#000"
        android:textSize="20sp" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/detail_description"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/product_details" />

    <Button
        android:id="@+id/add_cart"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/bottom"
        android:text="@string/add_cart"
        android:textColor="@color/white"
        android:textSize="20sp" />
</LinearLayout>