<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="15dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/list_product_icon"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="2"
            android:scaleType="centerCrop"
            android:src="@drawable/iphone14" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/list_product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name1"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/list_product_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/product_details"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/list_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/commodity_price"
                android:textColor="@color/price"
                android:textSize="15sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/cart" />
    </LinearLayout>
</LinearLayout>