<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:src="@drawable/header_image" />

    <TextView
        android:id="@+id/nickName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/username"
        android:textColor="#000"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/my_coupon"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/my_coupon"
            android:textColor="#000"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/my_coupon_more"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/more" />

        <TextView
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="30dp"
            android:text="@string/logout"
            android:layout_below="@+id/my_coupon"
            android:textColor="#000"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@+id/my_coupon_more"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/more" />
    </RelativeLayout>
</LinearLayout>