<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
      <include layout="@layout/toolbar"/>
    <!--start购物车商品-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="购物车"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:orientation="horizontal">

            <ImageView
                android:id="@+id/cart_product_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/iphone14" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cart_product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name1"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/cart_product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/commodity_price"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_marginStart="70dp"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/delete" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_decrement"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:text="-" />

                    <TextView
                        android:id="@+id/product_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/button_increment"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:text="+" />
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
    <!--end购物车商品-->
    <!--start购物车商品总计     -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="价格"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_order_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commodity_price"
                android:textSize="15sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="优惠"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_order_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commodity_price"
                android:textSize="15sp" />
        </LinearLayout>

        <include layout="@layout/dividing_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_order_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commodity_price"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp" />
        </LinearLayout>

        <Button
            android:id="@+id/order_settlement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/bottom"
            android:text="@string/settlement"
            android:textColor="@color/white" />

    </LinearLayout>
    <!--end 购物车商品总计     -->

</LinearLayout>